@@ -1,6 +1,8 @@
 Version 3.4.0
 * Add command line option --primary-band.  This causes a keyword to be added to the output FITS file.  Intended for VLITE.
 * makefits: check for files being multiple of 2880 bytes
+* fixes in pulse cal handling: better logic in closing files, some improvements in code clarity and some minor performance improvements.
+  - this fixes a bad bug when number of jobs is large; max number of file descriptors got exceeded.
 * print MJD range of converted output
 
 Version 3.3.0
